--- a/lesson_one.html
+++ b/lesson_one.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header container">
-        <div class="logo"><a href="/">MalanProg</a></div>
+        <div class="logo"><a href="https://github.com/AlexMalyan" target="_blank">MalanProg</a></div>
         <h1 class="header__h1">Основы языка JavaScript <br>урок первый</h1>
         <p></p>
     </header>
