--- a/lesson_two.html
+++ b/lesson_two.html
@@ -79,58 +79,40 @@
             <li class="list__item">Присвоить переменной а значение в промежутке [0..15]. С помощью оператора switch
                 организовать вывод чисел от a до 15.
                 <script>
-                    a = +prompt('Введите число от 0 до 15');
+                    a = 0;
                     switch (a) {
                         case 0:
-                            alert('Ваше число 0');
-                            break;
+                            console.log(a++);
                         case 1:
-                            alert('Ваше число 1');
-                            break;
+                            console.log(a++);
                         case 2:
-                            alert('Ваше число 2');
-                            break;
+                            console.log(a++);
                         case 3:
-                            alert('Ваше число 3');
-                            break;
+                            console.log(a++);
                         case 4:
-                            alert('Ваше число 4');
-                            break;
+                            console.log(a++);
                         case 5:
-                            alert('Ваше число 5');
-                            break;
+                            console.log(a++);
                         case 6:
-                            alert('Ваше число 6');
-                            break;
+                            console.log(a++);
                         case 7:
-                            alert('Ваше число 7');
-                            break;
+                            console.log(a++);
                         case 8:
-                            alert('Ваше число 8');
-                            break;
+                            console.log(a++);
                         case 9:
-                            alert('Ваше число 9');
-                            break;
+                            console.log(a++);
                         case 10:
-                            alert('Ваше число 10');
-                            break;
+                            console.log(a++);
                         case 11:
-                            alert('Ваше число 11');
-                            break;
+                            console.log(a++);
                         case 12:
-                            alert('Ваше число 12');
-                            break;
+                            console.log(a++);
                         case 13:
-                            alert('Ваше число 13');
-                            break;
+                            console.log(a++);
                         case 14:
-                            alert('Ваше число 14');
-                            break;
+                            console.log(a++);
                         case 15:
-                            alert('Ваше число 15');
-                            break;
-                        default:
-                            alert('Ваше число ' + a + ' не подходит под условие!');
+                            console.log(a++);
                             break;
                     }
                 </script>
